@@ -1,3 +1,12 @@
+2011-04-11  Varun Jain  <varunjain@chromium.org>
+
+        Reviewed by Darin Fisher.
+
+        Resolving FIXME to make new WebWidget method pure virtual since all downstream classes have implemented the method.
+        https://bugs.webkit.org/show_bug.cgi?id=58245
+
+        *  Source/WebKit/chromium/public/WebWidget.h:
+
 2011-04-11  Thouraya ANDOLSI  <thouraya.andolsi@st.com>
 
         Reviewed by Oliver Hunt.
